# DeltaMCP

./: .gitignore  CLAUDE_CODE_COMMAND.md  FIX_CLAUDE_CODE.md  QUICK_START.md  README.md  STRUCTURE.md  USAGE.md  browser_utils.py  config_manager.py  delta_utils.py  delta_wrapper.py  git_utils.py  manifest.json  package.json  pyproject.toml  resources.py  server.py  validation.py
config/: example.gitconfig
examples/: claude_code_config.json  claude_config.json  cursor_config.json
tests/: __init__.py  test_config_manager.py  test_git_utils.py  test_validation.py
